--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodejs-file-downloader": "^4.12.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.2",
+    "nodejs-file-downloader": "^4.12.1",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
