--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
+    "node-html-to-image": "^4.0.0",
     "nodejs-file-downloader": "^4.12.1",
     "sib-api-v3-sdk": "^8.5.0"
   }
